Enabled to execute all the test via sbt